log
Fri 12 Aug 2022 04:48:14 PM UTC: 
 tests:  0|7
total_score: 0/70
3351307
Fri 12 Aug 2022 04:50:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     c=a+b;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
221f56b
Fri 12 Aug 2022 04:51:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e3161ca
Fri 12 Aug 2022 04:52:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     c=(a+b);
      |      ^
cc1: all warnings being treated as errors
Compilation failed
133b950
Fri 12 Aug 2022 04:52:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
47309e2
Fri 12 Aug 2022 04:54:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
7814a15
Fri 12 Aug 2022 04:55:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
175f4f7
Fri 12 Aug 2022 05:01:15 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e0921d5
Fri 12 Aug 2022 05:02:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1562db1
Fri 12 Aug 2022 05:03:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a1a7f32
Fri 12 Aug 2022 05:04:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2616528
Fri 12 Aug 2022 05:04:43 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
9c0ba8f
Fri 12 Aug 2022 05:05:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
caa9865
Fri 12 Aug 2022 05:06:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5250c3d
Fri 12 Aug 2022 05:11:01 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e6fc3ec
Fri 12 Aug 2022 05:11:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
62d0e21
Fri 12 Aug 2022 05:11:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
33dbff5
Fri 12 Aug 2022 05:11:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0a4ef25
Fri 12 Aug 2022 05:12:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e8b16f8
Fri 12 Aug 2022 05:12:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a407b21
Fri 12 Aug 2022 05:12:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e3a8f6e
Fri 12 Aug 2022 05:14:00 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
e0c4c3f
Fri 12 Aug 2022 05:15:53 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
ba4cb6f
Fri 12 Aug 2022 05:16:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e5d9e30
Fri 12 Aug 2022 05:27:33 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:16: error: request for member ‘n’ in something not a structure or union
   40 |   *suma=sumaN(a.n)-sumaN(a,n-m);
      |                ^
exercises.c:40:9: error: too few arguments to function ‘sumaN’
   40 |   *suma=sumaN(a.n)-sumaN(a,n-m);
      |         ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c: In function ‘crearPersona’:
exercises.c:58:11: error: unused variable ‘p’ [-Werror=unused-variable]
   58 |   Persona p;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
f8b8e8a
Fri 12 Aug 2022 05:27:42 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:16: error: request for member ‘n’ in something not a structure or union
   40 |   *suma=sumaN(a.n)-sumaN(a,n-m);
      |                ^
exercises.c:40:9: error: too few arguments to function ‘sumaN’
   40 |   *suma=sumaN(a.n)-sumaN(a,n-m);
      |         ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
3eaaacb
Fri 12 Aug 2022 05:27:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a75290d
